# FediPrint

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  docker-compose.dev.yml  docker-compose.yml  openapi.yaml  temp_mastodon_toot.json5
.cargo/: config.toml
.github/workflows/: docker-backend.yml  docker-frontend.yml  run-tests.yaml
.sqlx/: query-0204f67ecce5665dfab55e69e841dadb92d80b27876227dcd7c128a75b1b54d0.json  query-03a0cca4aaa818f0d75ded8369f98c4ee255640988ffb3c583e2d794cc11ba63.json  query-0b0d7ec0c01029d9ad737326b571fb5f0aab98695e5fc82dd545b913839b61cb.json  query-18e43e826ad6fe3252f87eb6d188524492b9b074ee584bdf794c0e6f845ba74f.json  query-54bf6b91b43afdcf3c724f76c5f29b6eabf0da50f5efaac232a8199314d9c252.json  query-75863135c069a40c5ae1683c86b71e9421d4f0e04011e1e4425bd2dd3d3de1a4.json  query-9c38c4d196891bf869d117e4e80025dc09c9df4c2212d22d7c94b6b75498ee80.json  query-abf17a0ff1585008ee5b34de548ce3ef7dd6d35278febacb7a132b58fc518efe.json  query-ad40ccc43cab5746da21199457492e065fd5534074f5f520507dc61d9a31045f.json  query-b0105d336309da9dacd2aa731894680c4a7d3ca93a8ca80997bbdbcfe5dd0d34.json  query-b6c26ffc3bee691257aa6433e1b43a836185dcbcfae65f6f8ea25604f6529d66.json  query-bc756debfbf072d65565b500aaad8e1c4ae69500964be7be907466ffc572aca6.json  query-bcdd1178d756e1fa87bb6a850fc03d237eff82f31997e279dc9b76f5aaf1c39d.json  query-c6ab98a1007893ae8e0184824a5d2f214b821c05ba00ee3b0124c1a0edac4672.json  query-f0d00273be6dae747d1c44f2794156859a74c48be1b3594560eb9f5e19eaf601.json  query-fdfa6fcbc1d79a758421032989ff27586faf7c72ed638c50747a41766c0bb97d.json
database/: Cargo.toml
database/src/: printer.rs
docker/: backend.Dockerfile  dev.Caddyfile  frontend.Dockerfile  prod.Caddyfile
docs/: develop.md  self-host.md  stripe-setup.md  technical.md
fediprint/: Cargo.toml
fediprint/.sqlx/: query-0457c04aa8123fc7a5b62801273a54454002dc4f650cfa3445e1efffdc6a7741.json  query-085146ce667446b4c47f7909b7bfd718851f4d2eed6437c753b26717c21dc57b.json  query-0b2a0f16e446661c6933de5e80e97de4e904834a73b3c1641ecc7dd5831892d5.json  query-0d4ea277488deaa4aa4c4c352bc81389237a00f30ca11ebd155f5717e8817b79.json  query-0f76a6df16b6bac5b36ba6d567144e2e43896f03d80acbe280849200b8c4699c.json  query-108fc6590fab05af2f9ca215b75ca55049005a178468afefe5c7143d6cbc1eb0.json  query-17b7e20a28957f1e6ad63af558222926c8f2bbd1c3748dcf7c8d932571906a01.json  query-1ba07a6e090fb188d8a4a0322eb6cdd7d8a50e4ccadd495eab953ec15e0d9db5.json  query-1f3fa5509f7781fe0c5cedbab7bb93ae34e5554381ade9308454675ecfc7ccc5.json  query-20c018f68eb6a8df6fb71169c625c6db7d206363f7d8ce51b6b66ae943511a7e.json  query-26e71d9b1bc857beadf253b2256301ce2f59bdc05ed3eb80fdabe413afc22a5b.json  query-27b0c3c8aadc64e413eeff2e78c669385d957f35659b3d425c1848d8d89e96ec.json  query-2825bdcb00c41464393326ef86ffbfa6bf40eb81ce1ca5d499cab517c63d908b.json  query-290b0640120c952cc855df588ba72365f2e14d819be8ad7c28df29da597623ee.json  query-2aaa58aec035fc34207d34cf348b798ce9a14c235e27200d437483620680b912.json  query-2ac0cf238810f76e1764d68e97147de2fe9606d47e52a9e145d83d47ca9ba3eb.json  query-2adbc6f90da00bbf3210ddb3e30ff71badce16161a857910c7a877eac249eb37.json  query-378669280653d2515e542b6fa3e93b4b8a4878ea1c87b54bc7c5c5a3c16c52be.json  query-3ad7de932858acf686e0bb8146a1b0cdea02a9b6fa5bb42404533feff8044ebe.json  query-4082b2a632e76a2a65786063382775e52f4d4c74881db429e2f78083ec4cef5d.json  query-418590250daa95194d4b6151c7850422281c9b339784b50dc4878f191a8fb036.json  query-41fd7152a08864e1659348c74f5f66060b3784efa2f8fb17d94f28727bace262.json  query-422d7a54b221850c58ee06efa6ed751112213e9b8f404c108302500150bc3c86.json  query-446f4d8820802058995915b3ea730f28ef3778a5e5a94aa2fac78d26c08358ea.json  query-46fb20f63f6692bb1599b5495e82a1b87f6894bf099c4b4496364ce0800770a6.json  query-4bba3bee8279f9e69d694510d734cb3cb8f1d4679d343de8fd84916db0fe2bb0.json  query-57b7ce69725ca14c43d9b884184498adeff75f6c6ec06bff5c63da2302994232.json  query-5da1747c6aeee4db396cd6720213ce6058c0cc7223a26d995f8c06ef3b0b7b43.json  query-5e934c93cfbb0bc682d3089ca33d20bf4b9a78750e252237e692504eaf8b03a4.json  query-5f237376e53efbade5cff79d9badb205a33aa02458f15d9e568aa0becf5fee2b.json  query-66b8242aa3347e33ca75d2630b8b41ca03f0737ac26203bdff211572ea4feb06.json  query-677f5bdcb021190b25518445a1eade929df722a76828217ed28fbf4e90ed0a92.json  query-680e8a97e7bf25e92b171d6167ca9500ce8febd04fd5afcc0ee601af6ac7e0c4.json  query-6ac68241b1e860f7d465afde8075ed1ca6b207b0a3cb4e6f8ec335aea5b21a6f.json  query-6c942218727249c4b3d0e37e0719fd82b127c5a568548c01d734883ece7f8398.json  query-6eae9e4c8dc5674f6eddb0936d170043a69410859d2d70ee1ecfc7edd86f3062.json  query-70e565fdc185d4c30e753d0460750c7efe504ab3181423f69c6d65800dd4152c.json  query-73257b7f9b0804011055f309b47cb082df4f655db7d45337ee91e391868c6fc8.json  query-7665e599c2bcbe8fe2b795559ae803606c3dd6a1fe5eabd83118e798a1abaf98.json  query-782e4a164390367098d1875ee201a2648c3699c56e0aaa60396a6843fb6c7788.json  (+39 more)
fediprint/app/: Cargo.toml  build.rs
fediprint/shared/: Cargo.toml
fediprint/shared/src/: lib.rs
fediprint/shared/src/db/: account.rs  file.rs  instances.rs  mod.rs  model.rs  note.rs  printer.rs  profile.rs  transactions.rs
fediprint/shared/src/helpers/: activities.rs  config.rs  instances.rs  media.rs  mod.rs  profile.rs  webfinger.rs
fediprint/shared/src/models/: activitypub.rs  data.rs  inbox.rs  mod.rs  model.rs  printers.rs  storage.rs
fediprint/worker/: Cargo.toml
fediprint/worker/src/: lib.rs  main.rs  types.rs
fediprint/worker/src/tasks/: email.rs
fediprint/worker/templates/email/: register.html
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  uno.config.ts  vite.config.ts
frontend/src/: app.d.ts  app.html  hooks.server.ts
migrations/: 20240313135359_init.down.sql  20240313135359_init.up.sql  20240519125546_jobs.down.sql  20240519125546_jobs.up.sql  20240609143248_instances.down.sql  20240609143248_instances.up.sql
migrations/2024-03-10-102622_init/: down.sql  up.sql
prisma/: schema.prisma
prusaslicer/: Cargo.toml
src/: main.rs  schema.rs
(+106 files in other folders)
