[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "chrono", "json", "macros" ] }
uuid = { version = "1.7.0", features = ["serde", "v4", "fast-rng", "v7"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_derive = "1.0.202"
chrono = { version = "0.4.34", features = ["clock", "serde"] }