[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }
uuid = { version = "1.7.0", features = ["serde", "v4", "fast-rng", "v7"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_derive = "1.0.202"
chrono = { version = "0.4.34", features = ["clock", "serde"] }
url = "2.5.0"
percent-encoding = "2.3.1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
tracing = "0.1"
strum = { version = "0.26", features = ["derive"] }
serde_path_to_error = "0.1"
rust-s3 = { version = "0.34.0-rc4", features = ["async-std"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3.30"
lazy_static = "1"
meilisearch-sdk = "0.25.0"
async-stripe = { version = "0.37", features = ["runtime-tokio-hyper"] }
