[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }
uuid = { version = "1.7.0", features = ["serde", "v4", "fast-rng", "v7"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = { version = "0.4.34", features = ["clock", "serde"] }
num-derive = "0.4.2"
num-traits = "0.2.17"
anyhow = "1.0.79"
shared = { path = "../shared" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1"
askama = "0.12.1"
lettre = "0.11.7"
